# sdk

./: .gitignore  Cargo.toml  README.md
contracts/: Move.toml  README.md
contracts/sources/: verification.move  vk_registry.move
crates/client/: Cargo.toml  README.md
crates/client/example/: .gitignore
crates/client/src/: aptos_cmds.rs  aptos_utils.rs  constants.rs  lib.rs  main.rs  prove_cmd.rs  to_ark.rs  util_cmd.rs
crates/common/logger/: Cargo.toml
