[workspace]
members = [
    "crates/client",
    "crates/common/logger",
#    "crates/prover/types",
#    "crates/prover/contract-types",
#    "crates/prover/node",
#    "crates/prover/node-rpc",
#    "crates/prover/storage",
#    "crates/prover/aptos-events",
#    "crates/prover/vk-generation",
#    "crates/prover/query-module-resolver",
#    "crates/prover/prove-dispatcher",
#    "crates/prover/utils/fake-rng",
#    "crates/prover/utils/move-helpers",
]
resolver = "2"
[workspace.dependencies]
log = { version = "0.4" }
env_logger = { version = "0.9" }
rand = { version = "0.8" }
rand_core = { version = "0.6" }
toml = { version = "0.8" }
anyhow = { version = "1" }
tokio = { version = "1", features = ["rt-multi-thread"] }
async-stream = { version = "0.3" }
futures-util = { version = "0.3" }
futures-core = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
hex = { version = "0.4" }
bcs = { version = "0.1.5" }
threadpool = { version = "1.8" }
rayon = { version = "1.7" }
clap = { version = "4", features = ["derive"] }
rocksdb = { version = "0.21" }

move-binary-format = { git = "https://github.com/zkmove/aptos-core", rev = "59647fda5" }
move-core-types = { git = "https://github.com/zkmove/aptos-core", rev = "59647fda5" }
move-vm-runtime = { git = "https://github.com/zkmove/aptos-core", rev = "59647fda5" }
move-vm-types = { git = "https://github.com/zkmove/aptos-core", rev = "59647fda5" }
move-bytecode-verifier = { git = "https://github.com/zkmove/aptos-core", rev = "59647fda5" }
move-package = { git = "https://github.com/zkmove/aptos-core", rev = "59647fda5" }
vm-circuit = { path = "../zkmove-vm/vm-circuit", package = "vm-circuit" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.3.0" }
aptos-sdk = { git = "https://github.com/zkmove/aptos-core", branch = "aptos-release-v1.6" }
aptos-schemadb = { git = "https://github.com/zkmove/aptos-core", branch = "aptos-release-v1.6" }
aptos-move-core-types = { git = "https://github.com/zkmove/aptos-core", branch = "aptos-release-v1.6", package = "move-core-types" }


#[patch."https://github.com/zkmove/zkmove-vm"]
#vm-circuit = { path = "../zkmove-vm/vm-circuit", package = "vm-circuit" }
