[package]
name = "zkmove-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
halo2_proofs.workspace = true
move-package = { workspace = true }
move-core-types = { workspace = true }
vm-circuit = { workspace = true }
ark-bn254 = { version = "0.4.0" }
ark-serialize = { version = "0.4" }
ark-ec = { version = "0.4" }
anyhow = "1.0.38"
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
logger = { path = "../common/logger" }

[dev-dependencies]

[[bin]]
name = "zkmove"
path = "src/main.rs"

[features]
test-circuits = []